styles/index.css
@tailwind base;

@layer base {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  .heading {
    font-family: "Montserrat";
    @apply font-bold;
  }
  html {
    scroll-behavior: smooth;
    scroll-padding-top: theme("spacing.32");
  }
  body {
    background: url("/background.jpg") no-repeat center center fixed black;
    background-size: cover;
  }
  .menu {
    @apply bg-white text-black shadow-lg;
  }
  .menu h1 {
    @apply text-primary;
  }
  .menu-top {
    @apply bg-transparent text-primary-text;
  }
  .menu-top .brand {
    /* @apply transform origin-left scale-150; */
  }
}

@tailwind components;

@layer components {
  .link {
    @apply text-primary transition duration-200 ease-in-out;
  }
  .link:hover,
  .link:active {
    @apply text-primary-light;
  }
  .btn {
    @apply px-4 py-2 rounded-full font-medium transition duration-200 ease-in-out inline-block transform;
    font-family: "Montserrat";
  }
  .btn:hover,
  .btn:focus {
    @apply scale-105;
  }
  .btn-primary {
    @apply bg-primary text-primary-text;
  }
  .btn-primary:hover,
  .btn-primary:focus {
    @apply bg-primary-light;
  }
  .btn-outline {
    @apply border border-primary text-primary;
  }
  .paper {
    @apply shadow-lg rounded bg-white;
  }
}

@tailwind utilities;

@layer utilities {
  .transition-default {
    @apply transition duration-200 ease-in-out;
  }
}

